--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vx/responsive": "0.0.165",
     "create-react-app": "^1.5.2",
     "npm": "^6.1.0"
   },
