--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@material-ui/core": "^1.3.1",
+    "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^1.1.0",
+    "@vx/axis": "0.0.170",
     "@vx/group": "0.0.165",
     "@vx/mock-data": "0.0.165",
+    "@vx/responsive": "0.0.165",
     "@vx/scale": "0.0.165",
     "@vx/shape": "0.0.168",
+    "@vx/tooltip": "0.0.165",
     "axios": "^0.18.0",
     "d3": "^5.5.0",
-    "leaflet": "^1.3.1",
+    "leaflet": "^1.3.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-easy-chart": "^1.0.0",
     "react-leaflet": "^2.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
-    "react-select": "^1.2.1"
+    "react-select": "^1.3.0"
   }
 }
