--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@vx/responsive": "0.0.165",
     "@vx/tooltip": "0.0.165",
     "create-react-app": "^1.5.2",
+    "jquery": "^3.3.1",
     "npm": "^6.1.0",
     "react-easy-chart": "^1.0.0"
   },
