--- a/package.json
+++ b/package.json
@@ -2,21 +2,15 @@
   "name": "biotablero18.07.01",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "create-react-app": "^1.5.2",
-    "jquery": "^3.3.1",
-    "npm": "^6.2.0",
-    "react-easy-chart": "^1.0.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "@material-ui/core": "^1.4.2",
-    "@material-ui/icons": "^1.1.0",
+  "dependencies": {
+    "@material-ui/core": "1.4.2",
+    "@material-ui/icons": "1.1.0",
     "@vx/axis": "0.0.170",
     "@vx/glyph": "0.0.170",
     "@vx/grid": "0.0.170",
@@ -26,15 +20,19 @@
     "@vx/scale": "0.0.165",
     "@vx/shape": "0.0.168",
     "@vx/tooltip": "0.0.165",
-    "axios": "^0.18.0",
-    "d3": "^5.5.0",
-    "leaflet": "^1.3.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-easy-chart": "^1.0.0",
-    "react-leaflet": "^2.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.4",
-    "react-select": "^1.3.0"
+    "axios": "0.18.0",
+    "d3": "5.5.0",
+    "jquery": "3.3.1",
+    "leaflet": "1.3.3",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-easy-chart": "1.0.0",
+    "react-leaflet": "2.0.0",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "1.1.4",
+    "react-select": "1.3.0"
+  },
+  "devDpendencies": {
+    "react-scripts": "1.1.0"
   }
 }
