--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "create-react-app": "^1.5.2",
     "jquery": "^3.3.1",
     "npm": "^6.2.0",
-    "react-easy-chart": "^1.0.0"
+    "react-easy-chart": "^1.0.0",
+    "react-select": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +22,6 @@
     "@vx/glyph": "0.0.170",
     "@vx/grid": "0.0.170",
     "@vx/group": "0.0.165",
-    "@vx/mock-data": "0.0.165",
     "@vx/responsive": "0.0.165",
     "@vx/scale": "0.0.165",
     "@vx/shape": "0.0.168",
