--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "react-scripts": "1.1.4",
     "react-select": "1.3.0"
   },
-  "devDpendencies": {
-    "react-scripts": "1.1.0"
+  "devDependencies": {
+    "react-scripts": "1.1.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.10.0"
   }
 }
