--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@material-ui/core": "1.4.2",
+    "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "1.1.0",
     "@vx/axis": "0.0.170",
     "@vx/glyph": "0.0.170",
