--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/eslint/bin/eslint.js src/*"
+    "lint": "./node_modules/eslint/bin/eslint.js "
   },
   "dependencies": {
     "@material-ui/core": "^1.4.2",
@@ -33,7 +33,7 @@
     "react-select": "1.3.0"
   },
   "devDependencies": {
-    "react-scripts": "1.1.0",
+    "react-scripts": "1.1.4",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "2.13.0",
