--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "rules": {
+    "react/forbid-prop-types": "off",
+    "react/no-array-index-key": "off"
+  }
 }
