--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "5.5.0",
     "jquery": "3.3.1",
     "leaflet": "1.3.3",
+    "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-easy-chart": "1.0.0",
