Moving functionalities from Informer and ProjectFilter to Drawer and Compensator, to remove Informer and ProjectFilter. Fixing props names and adding Compensator.jsx as eslint verified list in README.md. Changing dependecy namefor icons in package.json to include upper versions

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.4.2",
-    "@material-ui/icons": "1.1.0",
+    "@material-ui/icons": "^1.1.0",
     "@vx/axis": "0.0.170",
     "@vx/glyph": "0.0.170",
     "@vx/grid": "0.0.170",
