--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     "leaflet": "1.3.3",
     "prop-types": "15.6.2",
     "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react-dom": "^16.4.2",
     "react-easy-chart": "1.0.0",
     "react-leaflet": "2.0.0",
     "react-router-dom": "4.3.1",
     "react-select": "1.3.0"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "eslint": "4.19.1",
-    "eslint-config-airbnb": "17.0.0",
-    "eslint-plugin-import": "2.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.10.0"
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-config-react-app": "^2.1.0"
   }
 }
