--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/eslint/bin/eslint.js "
+    "lint": "./node_modules/eslint/bin/eslint.js src/"
   },
   "dependencies": {
     "@material-ui/core": "^1.4.2",
