--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "parser": "babel-eslint",
   "rules": {
     "react/forbid-prop-types": "off",
-    "react/no-array-index-key": "off"
+    "react/no-array-index-key": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
