--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "5.5.0",
     "eslint": "4.19.1",
     "leaflet": "1.3.3",
+    "npm": "^6.4.1",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "^16.4.2",
