--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "./node_modules/eslint/bin/eslint.js src/"
   },
   "dependencies": {
-    "@material-ui/core": "^1.4.2",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.1.0",
     "@vx/axis": "0.0.170",
     "@vx/glyph": "0.0.170",
@@ -29,6 +29,7 @@
     "react": "16.4.1",
     "react-dom": "^16.4.2",
     "react-leaflet": "2.0.0",
+    "react-masonry-component": "6.2.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "^1.1.4",
     "react-select": "1.3.0"
