--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.1.0",
     "@vx/axis": "0.0.170",
+    "@vx/curve": "0.0.182",
     "@vx/glyph": "0.0.170",
     "@vx/grid": "0.0.170",
     "@vx/group": "0.0.165",
+    "@vx/mock-data": "0.0.185",
     "@vx/responsive": "0.0.165",
     "@vx/scale": "0.0.165",
     "@vx/shape": "0.0.168",
     "@vx/tooltip": "0.0.165",
     "axios": "0.18.0",
     "d3": "5.5.0",
+    "d3-array": "2.0.3",
     "eslint": "4.19.1",
     "leaflet": "1.3.3",
     "npm": "^6.4.1",
@@ -39,7 +42,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.11.0",
-    "eslint-config-react-app": "^3.0.8"
+    "eslint-config-react-app": "^2.1.0"
   },
   "dependenciesComments": {
     "eslint-plugin-jsx-a11y": "Keep in ^5.1.1 version to avoid warnings"
