--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@material-ui/icons": "^1.1.0",
     "@vx/axis": "0.0.170",
     "@vx/curve": "0.0.182",
-    "@vx/event": "0.0.182",
     "@vx/glyph": "0.0.170",
     "@vx/gradient": "0.0.183",
     "@vx/grid": "0.0.170",
@@ -41,10 +40,10 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-config-react-app": "^2.1.0"
   },
   "dependenciesComments": {
     "eslint-plugin-jsx-a11y": "Keep in ^5.1.1 version to avoid warnings"
