--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "./node_modules/eslint/bin/eslint.js src/"
   },
   "dependencies": {
+    "@bit/grommet.grommet.data-table": "^2.6.5",
+    "@bit/grommet.grommet.meter": "^2.6.5",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.1.0",
     "@vx/axis": "0.0.170",
@@ -31,13 +33,14 @@
     "leaflet": "1.4.0",
     "npm": "^6.4.1",
     "prop-types": "15.6.2",
-    "react": "16.4.1",
+    "react": "^16.4.1",
     "react-dom": "^16.4.2",
     "react-leaflet": "2.0.0",
     "react-masonry-component": "6.2.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "^1.1.4",
-    "react-select": "1.3.0"
+    "react-select": "1.3.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
