--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vx/shape": "0.0.168",
     "@vx/tooltip": "0.0.165",
     "axios": "0.18.0",
+    "chart.js": "^2.8.0",
     "d3": "5.5.0",
     "d3-array": "2.0.3",
     "eslint": "4.19.1",
@@ -34,6 +35,7 @@
     "npm": "^6.4.1",
     "prop-types": "15.6.2",
     "react": "^16.4.1",
+    "react-chartkick": "^0.3.0",
     "react-dom": "^16.4.2",
     "react-leaflet": "2.0.0",
     "react-masonry-component": "6.2.1",
