--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "npx eslint src"
+    "lint": "npx eslint src --ext .js,.jsx"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
