--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-import": "^2.13.0",
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^7.19.0"
   },
   "dependenciesComments": {
+    "eslint": "Keep in ^5.16.0 to avoid Error: Cannot find module 'eslint/lib/formatters/stylish'",
     "eslint-plugin-jsx-a11y": "Keep in ^5.1.1 version to avoid warnings"
   }
 }
