--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.1.0",
+    "@nivo/line": "^0.61.1",
     "@vx/axis": "0.0.170",
     "@vx/curve": "0.0.182",
     "@vx/event": "0.0.182",
