--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^1.1.0",
     "@nivo/bar": "^0.61.1",
     "@nivo/bump": "^0.61.1",
+    "@nivo/line": "^0.61.1",
     "@vx/axis": "0.0.170",
     "@vx/curve": "0.0.182",
     "@vx/event": "0.0.182",
