Implement donut chart for sci-hf categories.
* Add corresponding color palette
* Connect with backend mockups

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nivo/bar": "^0.61.1",
     "@nivo/bump": "^0.61.1",
     "@nivo/line": "^0.61.1",
+    "@nivo/pie": "^0.61.1",
     "@vx/axis": "0.0.170",
     "@vx/curve": "0.0.182",
     "@vx/event": "0.0.182",
