--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "react-masonry-component": "6.2.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.0.3",
-    "react-select": "1.3.0",
-    "styled-components": "^4.2.0"
+    "react-select": "1.3.0"
   },
   "devDependencies": {
     "eslint": "5.6.0",
