--- a/package.json
+++ b/package.json
@@ -14,36 +14,25 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@nivo/bar": "^0.61.1",
-    "@nivo/bump": "^0.61.1",
     "@nivo/line": "^0.61.1",
     "@nivo/pie": "^0.61.1",
     "@vx/axis": "0.0.170",
-    "@vx/curve": "0.0.182",
-    "@vx/event": "0.0.182",
     "@vx/glyph": "0.0.170",
-    "@vx/gradient": "0.0.183",
     "@vx/grid": "0.0.170",
     "@vx/group": "0.0.165",
-    "@vx/mock-data": "0.0.185",
     "@vx/responsive": "0.0.165",
     "@vx/scale": "0.0.165",
-    "@vx/shape": "0.0.168",
     "@vx/tooltip": "0.0.165",
-    "axios": "0.19.0",
+    "axios": "0.21.1",
     "chart.js": "^2.8.0",
-    "d3": "5.5.0",
-    "d3-array": "2.0.3",
     "leaflet": "1.4.0",
-    "npm": "^6.4.1",
     "prop-types": "15.6.2",
     "react": "^16.8.6",
-    "react-chartkick": "^0.3.0",
     "react-dom": "^16.8.6",
     "react-leaflet": "2.0.0",
     "react-masonry-component": "6.2.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.0.3",
-    "react-select": "1.3.0"
+    "react-scripts": "2.0.3"
   },
   "devDependencies": {
     "eslint": "5.6.0",
