--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "rules": {
     "react/forbid-prop-types": "off",
     "react/no-array-index-key": "off",
-    "jsx-a11y/label-has-associated-control": "off"
+    "jsx-a11y/label-has-associated-control": "off",
+    "react/jsx-no-duplicate-props": ["error", { "ignoreCase": false }]
   }
 }
