--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,12 @@
     }],
     "template-curly-spacing" : "off",
     "indent": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
   }
 }
