Add cbm-dashboard as dependency and workspace

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "biotablero19.07.24",
+  "name": "biotablero",
   "version": "1.5.0",
-  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -25,6 +24,7 @@
     "@vx/scale": "0.0.165",
     "@vx/tooltip": "0.0.165",
     "axios": "0.21.1",
+    "cbm-dashboard": "1.0.0",
     "chart.js": "^2.8.0",
     "leaflet": "1.4.0",
     "prop-types": "15.6.2",
@@ -49,7 +49,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "private": true,
   "workspaces": [
-    "monitoreo"
+    "packages/cbm-dashboard"
   ]
 }
