--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "npx eslint src --ext .js,.jsx"
+    "lint": "eslint src --ext .js,.jsx"
   },
   "dependencies": {
     "@material-ui/core": "^4.0.0",
