--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -14,10 +14,11 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: 14.15.0
+        node-version: 14.15
+    - run: npm install -g yarn
     - name: Run linter
       run: |
-        npm ci
-        npm run lint
+        yarn install
+        yarn workspaces foreach run lint
       env:
         CI: true
