--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     - run: npm install -g yarn
     - name: Run linter
       run: |
+        yarn workspaces foreach run build
         yarn install
         yarn workspaces foreach run lint
       env:
