--- a/packages/cbm-dashboard/package.json
+++ b/packages/cbm-dashboard/package.json
@@ -34,7 +34,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "format": "prettier -w \"src/*\"",
-    "build": "rollup -c",
+    "build-pkg": "rollup -c",
     "build-dev": "rollup -cw --no-watch.clearScreen"
   },
   "keywords": [],
