--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-REACT_APP_REST_HOST='http://localhost/rest-api'
-REACT_APP_REST_PORT=
-REACT_APP_GEOSERVER_HOST='http://localhost/geoserver'
-REACT_APP_GEOSERVER_PORT=
+REACT_APP_BACKEND_URL='http://localhost/rest-api'
+REACT_APP_GEOSERVER_URL='http://localhost/geoserver'
+REACT_APP_BACKEND_KEY='key'
