--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,7 @@ Dockerfile
 .dockerignore
 .gitignore
 README.md
+.git
 
 # Artifacts that will be built during image creation.
 # This should contain all files created during `npm run build`.
