--- a/packages/cbm-dashboard/package.json
+++ b/packages/cbm-dashboard/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "dist/App.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "papaparse": "^5.3.0",
     "plotly.js": "^1.58.4",
     "react": "^17.0.1",
