--- a/packages/cbm-dashboard/package.json
+++ b/packages/cbm-dashboard/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "papaparse": "^5.3.0",
     "plotly.js": "^1.58.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-plotly.js": "^2.5.1"
+    "react-plotly.js": "^2.5.1",
+    "rollup-plugin-css-only": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -27,7 +29,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "parcel": "1.12.4",
+    "parcel": "1.12.3",
     "prettier": "^2.2.1",
     "rollup": "^2.39.0"
   },
