--- a/packages/cbm-dashboard/package.json
+++ b/packages/cbm-dashboard/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "papaparse": "^5.3.0",
     "plotly.js": "^1.58.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-plotly.js": "^2.5.1",
