--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-leaflet": "2.0.0",
     "react-masonry-component": "6.2.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
