--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@nivo/bar": "^0.69.0",
+    "@nivo/bullet": "^0.69.1",
     "@nivo/core": "^0.69.0",
     "@nivo/line": "^0.69.0",
     "@nivo/pie": "^0.69.0",
+    "@nivo/tooltip": "^0.69.0",
     "@vx/axis": "0.0.170",
     "@vx/glyph": "0.0.170",
     "@vx/grid": "0.0.170",
