--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-masonry-component": "6.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
+    "react-spring": "^9.1.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
