--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "15.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-to-csv": "^1.0.4",
     "react-leaflet": "2.0.0",
     "react-masonry-component": "6.2.1",
     "react-router-dom": "5.2.0",
