--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cbm-dashboard": "1.0.0",
     "chart.js": "^2.8.0",
     "leaflet": "1.4.0",
+    "leaflet-draw": "^1.0.4",
     "prop-types": "15.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
