--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^17.0.1",
     "react-json-to-csv": "^1.0.4",
     "react-leaflet": "2.0.0",
-    "react-leaflet-draw": "^0.19.8",
+    "react-leaflet-draw": "0.19.0",
     "react-masonry-component": "6.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
