--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-masonry-component": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
