--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -27,7 +27,8 @@
     "parcel": "^2.0.0-rc.0",
     "prettier": "^2.3.2",
     "rollup": "^2.56.3",
-    "rollup-plugin-css-only": "^3.1.0"
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-react-svg": "^3.0.3"
   },
   "scripts": {
     "dev": "parcel index.html",
