--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/App.js",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
