--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -5,6 +5,7 @@
   "main": "dist/App.js",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
