--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -29,9 +29,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-rc.0",
     "prettier": "^2.3.2",
-    "rollup": "^2.56.3",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-react-svg": "^3.0.3"
+    "rollup-plugin-css-only": "^3.1.0"
   },
   "scripts": {
     "dev": "parcel index.html",
