--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -9,7 +9,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-masonry-component": "^6.3.0"
+    "react-masonry-component": "^6.3.0",
+    "rollup": "^2.56.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
