--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_BACKEND_URL='http://localhost/rest-api'
 REACT_APP_GEOSERVER_URL='http://localhost/geoserver'
 REACT_APP_BACKEND_KEY='key'
+REACT_APP_ENVIRONMENT='develop|staging|production'
