--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -5,11 +5,11 @@
   "main": "dist/App.js",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "firebase": "^9.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-masonry-component": "^6.3.0",
-    "rollup": "^2.56.3"
+    "react-masonry-component": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -18,7 +18,7 @@
     "@material-ui/core": "^4.12.3",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-rc.0",
     "prettier": "^2.3.2",
+    "rollup": "^2.59.0",
     "rollup-plugin-css-only": "^3.1.0"
   },
   "scripts": {
