--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -5,6 +5,7 @@
   "main": "dist/App.js",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "firebase": "^9.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -15,7 +16,6 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
-    "@material-ui/core": "^4.12.3",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
