--- a/packages/cbm-dashboard/package.json
+++ b/packages/cbm-dashboard/package.json
@@ -6,33 +6,33 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "papaparse": "^5.3.0",
-    "plotly.js": "^1.58.4",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-plotly.js": "^2.5.1"
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "papaparse": "~5.3.0",
+    "plotly.js": "~1.58.4",
+    "prop-types": "~15.7.2",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
+    "react-plotly.js": "~2.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "eslint": "^7.17.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@babel/core": "~7.12.10",
+    "@babel/preset-env": "~7.12.11",
+    "@babel/preset-react": "~7.12.10",
+    "@rollup/plugin-babel": "~5.3.0",
+    "@rollup/plugin-commonjs": "~17.1.0",
+    "@rollup/plugin-node-resolve": "~11.2.0",
+    "eslint": "~7.17.0",
+    "eslint-config-airbnb": "~18.2.1",
+    "eslint-config-prettier": "~7.1.0",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jsx-a11y": "~6.4.1",
+    "eslint-plugin-prettier": "~3.3.1",
+    "eslint-plugin-react": "~7.22.0",
+    "eslint-plugin-react-hooks": "~4.2.0",
     "parcel": "1.12.3",
-    "prettier": "^2.2.1",
-    "rollup": "^2.39.0",
-    "rollup-plugin-css-only": "^3.1.0"
+    "prettier": "~2.2.1",
+    "rollup": "~2.39.0",
+    "rollup-plugin-css-only": "~3.1.0"
   },
   "scripts": {
     "dev": "parcel index.html",
