--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@nivo/bar": "^0.69.0",
-    "@nivo/bullet": "^0.69.1",
-    "@nivo/core": "^0.69.0",
-    "@nivo/line": "^0.69.0",
-    "@nivo/pie": "^0.69.0",
-    "@nivo/tooltip": "^0.69.0",
+    "@nivo/bar": "~0.69.0",
+    "@nivo/bullet": "~0.69.1",
+    "@nivo/core": "~0.69.0",
+    "@nivo/line": "~0.69.0",
+    "@nivo/pie": "~0.69.0",
+    "@nivo/tooltip": "~0.69.0",
     "@vx/axis": "0.0.170",
     "@vx/glyph": "0.0.170",
     "@vx/grid": "0.0.170",
@@ -27,30 +27,30 @@
     "@vx/tooltip": "0.0.165",
     "axios": "0.21.1",
     "cbm-dashboard": "1.0.0",
-    "chart.js": "^2.8.0",
+    "chart.js": "~2.8.0",
     "indicators": "1.0.0",
     "leaflet": "1.4.0",
     "leaflet-draw": "^1.0.4",
     "prop-types": "15.6.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-json-to-csv": "^1.0.4",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
+    "react-json-to-csv": "~1.0.4",
     "react-leaflet": "2.7.0",
     "react-leaflet-draw": "0.19.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
-    "react-spring": "^9.1.2",
-    "styled-components": "^5.2.3"
+    "react-spring": "~9.1.2",
+    "styled-components": "~5.2.3"
   },
   "devDependencies": {
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3"
+    "eslint": "~7.19.0",
+    "eslint-config-airbnb": "~18.2.1",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jsx-a11y": "~6.4.1",
+    "eslint-plugin-react": "~7.22.0",
+    "eslint-plugin-react-hooks": "~1.7.0",
+    "husky": "~4.3.6",
+    "lint-staged": "~10.5.3"
   },
   "lint-staged": {
     "**/*.{js,jsx}": "eslint"
