--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
+  "parser": "react-scripts/node_modules/babel-eslint",
   "rules": {
     "react/forbid-prop-types": "off",
     "react/no-array-index-key": "off",
