Update vx related deps and add tilde

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@nivo/line": "~0.69.0",
     "@nivo/pie": "~0.69.0",
     "@nivo/tooltip": "~0.69.0",
-    "@vx/axis": "0.0.170",
-    "@vx/glyph": "0.0.170",
-    "@vx/grid": "0.0.170",
-    "@vx/group": "0.0.165",
-    "@vx/responsive": "0.0.165",
-    "@vx/scale": "0.0.165",
-    "@vx/tooltip": "0.0.165",
+    "@vx/axis": "~0.0.199",
+    "@vx/glyph": "~0.0.199",
+    "@vx/grid": "~0.0.199",
+    "@vx/group": "~0.0.199",
+    "@vx/responsive": "~0.0.199",
+    "@vx/scale": "~0.0.199",
+    "@vx/tooltip": "~0.0.199",
     "axios": "0.21.1",
     "cbm-dashboard": "1.0.0",
     "chart.js": "~2.8.0",
