--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@vx/responsive": "~0.0.199",
     "@vx/scale": "~0.0.199",
     "@vx/tooltip": "~0.0.199",
-    "axios": "0.21.1",
+    "axios": "~0.25.0",
     "cbm-dashboard": "1.0.0",
     "chart.js": "~2.8.0",
     "indicators": "1.0.0",
