--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -10,15 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
       with:
-        node-version: 14.15
-    - run: |
-        npm install -g yarn
-        yarn install
-        yarn workspaces foreach run build-pkg
+        node-version-file: '.nvmrc'
+        cache: yarn
+    - run: yarn install
+    - run: yarn workspaces foreach run build-pkg
     - name: Run linter
       run: yarn workspaces foreach run lint
       env:
