--- a/package.json
+++ b/package.json
@@ -42,6 +42,14 @@
     "react-spring": "~9.1.2",
     "styled-components": "~5.2.3"
   },
+  "dependenciesMeta": {
+    "@react-spring/core": {
+      "built": false
+    },
+    "parcel": {
+      "built": false
+    }
+  },
   "devDependencies": {
     "eslint": "~7.19.0",
     "eslint-config-airbnb": "~18.2.1",
