--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -23,7 +23,7 @@
     "eslint-config-airbnb": "~18.2.1",
     "eslint-config-prettier": "~7.1.0",
     "eslint-plugin-prettier": "~3.3.1",
-    "parcel": "~2.0.0-rc.0",
+    "parcel": "~2.3.1",
     "prettier": "~2.3.2",
     "rollup": "~2.59.0",
     "rollup-plugin-css-only": "~3.1.0"
