--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "eslint-plugin-react": "~7.22.0",
     "eslint-plugin-react-hooks": "~1.7.0",
     "husky": "~4.3.8",
-    "lint-staged": "~10.5.4"
+    "lint-staged": "~10.5.4",
+    "yarn-audit-fix": "~9.0.11"
   },
   "lint-staged": {
     "**/*.{js,jsx}": "eslint"
