Update nivo dependencies to the latest version and change ^ for ~ in material ones

--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "eslint src --ext .js,.jsx"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.2",
-    "@mui/styles": "^5.4.2",
-    "@nivo/bar": "~0.69.1",
-    "@nivo/bullet": "~0.69.1",
-    "@nivo/core": "~0.69.0",
-    "@nivo/line": "~0.69.1",
-    "@nivo/pie": "~0.69.0",
-    "@nivo/tooltip": "~0.69.0",
+    "@emotion/react": "~11.7.1",
+    "@emotion/styled": "~11.6.0",
+    "@mui/icons-material": "~5.4.2",
+    "@mui/material": "~5.4.2",
+    "@mui/styles": "~5.4.2",
+    "@nivo/bar": "~0.79.0",
+    "@nivo/bullet": "~0.79.0",
+    "@nivo/core": "~0.79.0",
+    "@nivo/line": "~0.79.0",
+    "@nivo/pie": "~0.79.0",
+    "@nivo/tooltip": "~0.79.0",
     "@vx/axis": "~0.0.199",
     "@vx/glyph": "~0.0.199",
     "@vx/grid": "~0.0.199",
