--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@nivo/line": "~0.79.0",
     "@nivo/pie": "~0.79.0",
     "@nivo/tooltip": "~0.79.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "@vx/axis": "~0.0.199",
     "@vx/glyph": "~0.0.199",
     "@vx/grid": "~0.0.199",
@@ -42,7 +46,8 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.2",
     "react-spring": "~9.1.2",
-    "styled-components": "~5.3.3"
+    "styled-components": "~5.3.3",
+    "typescript": "^4.7.3"
   },
   "dependenciesMeta": {
     "@react-spring/core": {
