--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-scripts": "4.0.2",
     "react-spring": "~9.1.2",
     "styled-components": "~5.3.3",
-    "typescript": "^4.7.3"
+    "typescript": "~4.7.3"
   },
   "dependenciesMeta": {
     "@react-spring/core": {
