--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint src --ext .js,.jsx"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@emotion/react": "~11.9.0",
@@ -56,24 +55,15 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "eslint": "~7.19.0",
-    "eslint-config-airbnb": "~18.2.1",
-    "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jsx-a11y": "~6.5.1",
-    "eslint-plugin-react": "~7.24.0",
-    "eslint-plugin-react-hooks": "~1.7.0",
     "husky": "~4.3.8",
     "lint-staged": "~10.5.4",
     "typescript": "~4.7.3",
     "yarn-audit-fix": "~9.3.1"
   },
-  "lint-staged": {
-    "**/*.{js,jsx}": "eslint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   },
   "browserslist": [
     ">0.2%",
