--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check-format": "prettier --check 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@emotion/react": "~11.9.0",
@@ -32,6 +33,7 @@
     "indicators": "1.0.0",
     "leaflet": "1.4.0",
     "leaflet-draw": "^1.0.4",
+    "prettier": "^2.7.1",
     "prop-types": "15.8.1",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
@@ -55,8 +57,6 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "husky": "~4.3.8",
-    "lint-staged": "~10.5.4",
     "typescript": "~4.7.3",
     "yarn-audit-fix": "~9.3.1"
   },
