--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-leaflet": "2.7.0",
     "react-leaflet-draw": "0.19.0",
     "react-router-dom": "5.3.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "~5.0.1",
     "react-spring": "~9.4.5",
     "styled-components": "~5.3.5"
   },
@@ -59,11 +59,6 @@
     "@types/react-dom": "^18.0.5",
     "typescript": "~4.7.3",
     "yarn-audit-fix": "~9.3.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": [
     ">0.2%",
