--- a/packages/cbm-dashboard/package.json
+++ b/packages/cbm-dashboard/package.json
@@ -28,7 +28,8 @@
     "parcel": "1.12.4",
     "prettier": "~2.6.2",
     "rollup": "~2.75.6",
-    "rollup-plugin-css-only": "~3.1.0"
+    "rollup-plugin-css-only": "~3.1.0",
+    "rollup-plugin-node-polyfills": "~0.2.1"
   },
   "scripts": {
     "dev": "parcel index.html",
