Add config to allow Set iteration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "jsx": "react-jsx",
     "target": "es5",
+    "downlevelIteration": true,
     "lib": [
       "dom",
       "dom.iterable",
