--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-leaflet": "^2.8.2",
     "typescript": "~4.7.3",
     "yarn-audit-fix": "~9.3.1"
   },
