--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REACT_APP_PROJECT_ID=''
 REACT_APP_STORAGE_BUCKET=''
 REACT_APP_SENDER_ID=''
 REACT_APP_APP_ID=''
+REACT_APP_BACKEND_BIAB_URL='http://biab-api'
