--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,8 +27,10 @@ jobs:
           node-version-file: '.nvmrc'
           cache: yarn
 
-      - name: install
-        run: yarn install
+      - name: install & build
+        run: |
+          yarn install
+          yarn run build
 
       - name: Deploy to Azure WebApp
         uses: azure/webapps-deploy@v2
