--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "biotablero",
   "version": "2.0.3",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 npx serve -s build",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -43,6 +44,7 @@
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
     "react-spring": "~9.4.5",
+    "serve": "^14.2.0",
     "styled-components": "~5.3.5"
   },
   "dependenciesMeta": {
