add missing command

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: install & build
         run: |
+          yarn workspaces foreach install
+          yarn workspaces foreach run build-pkg
           yarn install
           yarn run build
 
