--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,7 +10,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: biotablero-frontend
   REACT_APP_ENVIRONMENT: develop
-  REACT_APP_BACKEND_BIAB_URL: ${{ env.BACKEND_BIAB_URL }}
+  REACT_APP_BACKEND_BIAB_URL: ${{ vars.BACKEND_BIAB_URL }}
 
 jobs:
   build-and-deploy:
