--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,6 +10,9 @@ env:
   AZURE_WEBAPP_NAME: biotablero-frontend
   REACT_APP_ENVIRONMENT: develop
   REACT_APP_BACKEND_BIAB_URL: ${{ vars.BACKEND_BIAB_URL }}
+  REACT_APP_BACKEND_URL: ${{ vars.BACKEND_URL }}
+  REACT_APP_BACKEND_KEY: ${{ secrets.BACKEND_KEY }}
+  REACT_APP_ENVIRONMENT: ${{ vars.APP_ENVIRONMENT }}
 
 jobs:
   build-and-deploy:
