Organize and improve workflows

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,13 +1,13 @@
-name: Deploy develop
+name: Deploy staging
 
 on:
   push:
     branches:
-      - develop
+      - release/*
   workflow_dispatch:
 
 jobs:
   call-deploy:
     uses: .github/workflows/deploy_dev_stg.yml
     with:
-      app_env: develop
+      app_env: staging
