--- a/.github/workflows/check_format.yml
+++ b/.github/workflows/check_format.yml
@@ -1,12 +1,13 @@
-name: CI for releases
+name: Check format
 
 on:
   push:
     branches:
+      - feature/*
       - release/*
 
 jobs:
-  release:
+  Check format:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,10 +15,10 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version-file: '.nvmrc'
-        cache: yarn
-    - run: yarn install
+        node-version-file: 'package.json'
+        cache: pnpm
+    - run: pnpm install
     - name: Run prettier
-      run: yarn run check-format
+      run: pnpm check-format
       env:
         CI: true
