--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -11,3 +11,6 @@ jobs:
     uses: ./.github/workflows/deploy_dev_stg.yml
     with:
       app_env: staging
+    secrets:
+      BACKEND_KEY: ${{ secrets.BACKEND_KEY }}
+      AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
