Replace en var for polygon request API URL

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ REACT_APP_PROJECT_ID=''
 REACT_APP_STORAGE_BUCKET=''
 REACT_APP_SENDER_ID=''
 REACT_APP_APP_ID=''
-REACT_APP_BACKEND_BIAB_URL='http://biab-api'
+REACT_APP_BACKEND_STAC_URL='http://localhost:8000'
 REACT_APP_GA_TRACKING_ID='G-XXXXXXXXXX'
