Change polygon banckend env var

--- a/.github/workflows/deploy_dev_stg.yml
+++ b/.github/workflows/deploy_dev_stg.yml
@@ -14,7 +14,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: biotablero-frontend
   REACT_APP_ENVIRONMENT:  ${{ inputs.app_env }}
-  REACT_APP_BACKEND_BIAB_URL: ${{ vars.BACKEND_BIAB_URL }}
+  REACT_APP_BACKEND_STAC_URL: ${{ vars.BACKEND_STAC_URL }}
   REACT_APP_BACKEND_URL: ${{ vars.BACKEND_URL }}
   REACT_APP_BACKEND_KEY: ${{ secrets.BACKEND_KEY }}
   REACT_APP_GA_TRACKING_ID: ${{ vars.GA_TRACKING_ID }}
