Change actions to check format from the features branches to the development branch

--- a/.github/workflows/check_format.yml
+++ b/.github/workflows/check_format.yml
@@ -1,9 +1,11 @@
 name: Check format
 
 on:
+  pull_request:
+    branches:
+      - develop
   push:
     branches:
-      - feature/*
       - release/*
 
 jobs:
