Add env var to Yandex-Metrika

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ REACT_APP_SENDER_ID=''
 REACT_APP_APP_ID=''
 REACT_APP_BACKEND_BIAB_URL='http://biab-api'
 REACT_APP_GA_TRACKING_ID='G-XXXXXXXXXX'
+REACT_APP_YM_ID='XXXXXXXX'
