Add env var for MC backend

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ REACT_APP_STORAGE_BUCKET=''
 REACT_APP_SENDER_ID=''
 REACT_APP_APP_ID=''
 REACT_APP_SEARCH_BACKEND_URL='http://localhost:8000'
+REACT_APP_MONITORING_BACKEND_URL='http://localhost:5000'
 REACT_APP_GA_TRACKING_ID='G-XXXXXXXXXX'
 REACT_APP_YM_ID='XXXXXXXX'
