updates the .env vars

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-REACT_APP_BACKEND_URL='http://localhost/rest-api'
-REACT_APP_GEOSERVER_URL='http://localhost/geoserver'
-REACT_APP_BACKEND_KEY='key'
-REACT_APP_ENVIRONMENT='develop|staging|production'
-REACT_APP_API_KEY=''
-REACT_APP_DOMAIN=''
-REACT_APP_PROJECT_ID=''
-REACT_APP_STORAGE_BUCKET=''
-REACT_APP_SENDER_ID=''
-REACT_APP_APP_ID=''
-REACT_APP_SEARCH_BACKEND_URL='http://localhost:8000'
-REACT_APP_GA_TRACKING_ID='G-XXXXXXXXXX'
-REACT_APP_YM_ID='XXXXXXXX'
+VITE_BACKEND_URL='http://localhost/rest-api'
+VITE_GEOSERVER_URL='http://localhost/geoserver'
+VITE_BACKEND_KEY='key'
+VITE_ENVIRONMENT='develop|staging|production'
+VITE_API_KEY=''
+VITE_DOMAIN=''
+VITE_PROJECT_ID=''
+VITE_STORAGE_BUCKET=''
+VITE_SENDER_ID=''
+VITE_APP_ID=''
+VITE_SEARCH_BACKEND_URL='http://localhost:8000'
+VITE_GA_TRACKING_ID='G-XXXXXXXXXX'
+VITE_YM_ID='XXXXXXXX'
