updates .env monitoring url

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ VITE_STORAGE_BUCKET=''
 VITE_SENDER_ID=''
 VITE_APP_ID=''
 VITE_SEARCH_BACKEND_URL='http://localhost:8000'
+REACT_APP_MONITORING_BACKEND_URL='http://localhost:5000'
 VITE_GA_TRACKING_ID='G-XXXXXXXXXX'
 VITE_YM_ID='XXXXXXXX'
